Fix for last test